# comix-downloader

./: .coverage  .gitignore  ARCHITECTURE.md  CODE_REVIEW.md  CONTRIBUTING.md  DEVELOPMENT.md  MIGRATION.md  README.md  RELEASE_CHECKLIST.md  TODO.md  conftest.py  install.ps1  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: check_docs_consistency.py
src/comix_dl/: __init__.py  __main__.py  browser.py  browser_session.py  cdp_browser.py  cli.py  comix_service.py  config.py  converters.py  downloader.py  errors.py  fileio.py  history.py  http_client.py  logging_utils.py  notify.py  parser.py  settings.py  tui.py
src/comix_dl/application/: cleanup_usecase.py  download_reporting.py  download_usecase.py  query_usecase.py  session.py
src/comix_dl/cli/: __init__.py  display.py  flows.py  interactive.py
tests/: conftest.py  test_application_session.py  test_cdp_browser.py  test_cleanup_usecase.py  test_cli.py  test_comix_service.py  test_config.py  test_converters.py  test_display.py  test_download_reporting.py  test_download_usecase.py  test_downloader.py  test_fileio.py  test_flows.py  test_history.py  test_logging_utils.py  test_packaging.py  test_query_usecase.py  test_settings.py
