[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comix-downloader"
version = "0.1.0"
description = "A focused comix.to manga downloader with Cloudflare bypass"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "playwright>=1.40",
    "Pillow>=10.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
]

[project.scripts]
comix-dl = "comix_dl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
